--- a/cinema/pom.xml
+++ b/cinema/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.qa.roland</groupId>
-    <artifactId>Account</artifactId>
+    <artifactId>Cinema</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
 
